--- a/css/animated-headlines.css
+++ b/css/animated-headlines.css
@@ -145,7 +145,7 @@ xtype
 }
 .cd-headline.type .cd-words-wrapper::after {
   /* vertical bar */
-  content: '';
+  content: "";
   position: absolute;
   right: 0;
   top: 50%;
@@ -228,7 +228,8 @@ xrotate-2
   -webkit-perspective: 300px;
   perspective: 300px;
 }
-.cd-headline.rotate-2 i, .cd-headline.rotate-2 em {
+.cd-headline.rotate-2 i,
+.cd-headline.rotate-2 em {
   display: inline-block;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -352,7 +353,7 @@ xloading-bar
 -------------------------------- */
 .cd-headline.loading-bar span {
   display: inline-block;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
 .cd-headline.loading-bar .cd-words-wrapper {
   overflow: hidden;
@@ -360,7 +361,7 @@ xloading-bar
 }
 .cd-headline.loading-bar .cd-words-wrapper::after {
   /* loading bar */
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -379,7 +380,7 @@ xloading-bar
   transition: width 3s;
 }
 .cd-headline.loading-bar b {
-  top: .2em;
+  top: 0.2em;
   opacity: 0;
   -webkit-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
@@ -397,7 +398,7 @@ xslide
 -------------------------------- */
 .cd-headline.slide span {
   display: inline-block;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
 .cd-headline.slide .cd-words-wrapper {
   overflow: hidden;
@@ -405,7 +406,7 @@ xslide
 }
 .cd-headline.slide b {
   opacity: 0;
-  top: .2em;
+  top: 0.2em;
 }
 .cd-headline.slide b.is-visible {
   top: 0;
@@ -493,15 +494,15 @@ xclip
 -------------------------------- */
 .cd-headline.clip span {
   display: inline-block;
-  padding: .2em 0;
+  /* padding: 0.2em 0; */
 }
 .cd-headline.clip .cd-words-wrapper {
   overflow: hidden;
-  vertical-align: middle;
+  vertical-align: sub;
 }
 .cd-headline.clip .cd-words-wrapper::after {
   /* line */
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
