--- a/main.css
+++ b/main.css
@@ -4,10 +4,10 @@
 
 body {
   font-family: "Source Sans Pro", sans-serif;
-  /* background: url(;   ("daniele-levis-pelusi.jpg")  */
+
   background-size: cover;
   color: whitesmoke;
-  background: url(img/sunset.jpg) no-repeat center fixed;
+  background: url(assets/images/sunset.jpg) no-repeat center fixed;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -36,7 +36,7 @@ header h1 {
 
 nav {
   padding: 75px 10px;
-  background: #2b5bbd;
+  background:  rgba(36, 26, 26, 0.8);
 }
 nav ul li {
   display: inline-block;
@@ -71,7 +71,7 @@ span {
 }
 
 #about h2 {
-  font-family: "Poiret One", cursive;
+  font-family: Lora;
   font-size: 36px;
 }
 #about p {
@@ -98,7 +98,8 @@ span {
 }
 
 #work h3 {
-  font-family: "Poiret One", cursive;
+  font-family: "Lora";
+  font-weight: 800;
   color: #2b5bbd;
   font-size: 24px;
   width: 190px;
@@ -121,10 +122,7 @@ span {
   color: white;
 }
 
-.code-icon {
-  height: 150px;
-  width: 150px;
-}
+
 
 /* Portfolio */
 
@@ -133,13 +131,18 @@ span {
 } */
 
 #portTitle {
-  font-family: "Poiret One", cursive;
+  font-family: "Lora";
   font-size: 36px;
 }
 #portfolio-b {
   background: rgba(36, 26, 26, 0.8);
   padding: 60px 60px 120px;
   margin-bottom: 400px 30px;
+}
+
+.code-icon {
+  height: 100px;
+  width: 100px;
 }
 /****** CONTACT ******/
 
@@ -152,12 +155,12 @@ span {
 #contact-img {
   border: 5px solid #ffffff;
 }
-#contact h2,
+/* #contact h2,
 #email-header,
 #socialmedia-header,
 #contact ul {
   padding-left: 115px;
-}
+} */
 #envelope {
   padding-left: 115px;
   margin-top: 20px;
@@ -169,7 +172,7 @@ h5 {
 }
 
 #contact h2 {
-  font-family: "Poiret One", cursive;
+  font-family: "Lora"
   font-size: 36px;
 }
 #email-header {
@@ -199,4 +202,7 @@ h5 {
 
 .spacer {
   min-height: 200px;
+}
+#link{
+  color:whitesmoke;
 }
