--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ header h1 {
   font-size: 30px;
 }
 
+
 nav {
   padding: 75px 10px;
   background:  rgba(36, 26, 26, 0.8);
@@ -47,6 +48,7 @@ nav li a {
   font-size: 18px;
   color: whitesmoke;
   padding-left: 40px;
+  font-family: "Lora"
 }
 
 header h2 {
@@ -114,13 +116,17 @@ span {
 }
 
 #tech {
+  background: rgba(36, 26, 26, 0.8);
   font-style: italic;
-  height: 50px;
+  margin-top: 400px;
+  
 }
 
 #tech a {
   color: white;
 }
+
+
 
 
 
@@ -138,13 +144,14 @@ span {
 #portfolio-b {
   background: rgba(36, 26, 26, 0.8);
   padding: 60px 20px 120px;
-  margin-bottom: 400px 30px;
+  margin-bottom: 400px;
 }
 
 .code-icon {
   height: 100px;
   width: 100px;
 }
+
 /****** CONTACT ******/
 
 #contact {
@@ -208,8 +215,28 @@ h5 {
   color:whitesmoke;
 }
 
-.img-responsive{
+.img-responsive.code-icon{
   max-height: 320px;
-  width: 500px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
 }
 
+.img-responsive{
+  max-height: 320px;
+  
+  display: flex;
+  justify-content: center;
+}
+
+div.col-lg-4.col-sm-6 {
+  display: flex;
+  justify-content: center;
+}
+
+/* .code-icon{
+  height: 100px;
+  width: 100px;
+  background-color: whitesmoke;
+  border-radius: 50%;
+} */
