--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ color: whitesmoke;
 background-size: cover;
  
   background: url(../assets/images/sunset.jpg) no-repeat  center center fixed;
-  min-height: 100%;
+  height:100vh;
+
   width: 100%;
   overflow: auto;
   -webkit-background-size: cover;
