--- a/css/responsive.css
+++ b/css/responsive.css
@@ -162,7 +162,7 @@
   }
 }
 
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) {
   body:before {
     content: "";
     background-image: url("(../assets/images/sunset.jpg");
@@ -172,5 +172,4 @@
     left: 0;
     width: 100%;
     height: 100%;
-  }
-}
+  } */
